<resources>
    <string name="app_name">Controluz - Aplicativo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">M.L.H.V Productions</string>
    <string name="nav_header_subtitle">mlhvprod@hotmail.com</string>
    <string name="nav_github">Github</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="string_quarto">Quarto</string>
    <string name="string_sala">Sala</string>
    <string name="str_btn_ligar">ON</string>
    <string name="str_btn_desligar">OFF</string>
    <string name="str_btn_desconectar">Desconectar</string>
    <string name="controle">controle das luzes do imóvel</string>
    <string name="str_sobre">Sobre</string>
    <string name="str_ferramentas">Ferramentas</string>
    <string name="str_outros">Outros</string>
    <string name="txtSobre">Sobre</string>
    <string name="txtEquipe">Equipe</string>
    <string name="txtNome1">00181627 - Matheus Guilherme Ferreira</string>
    <string name="txtNome2">00179482 - Leonardo Souza da Costa</string>
    <string name="txtNome3">00170596 - Vinicius Modesto da Cruz</string>
    <string name="txtNome4">00178113 - Hugo Ferreira de Sá</string>
    <string name="op1">Opção 1</string>
    <string name="op2">Opção 2</string>
    <string name="op3">Opção 3</string>
    <string name="default_notification_channel_id">Notificação</string>
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="intro_message">teste</string>
    <string name="str_historico">Histórico</string>
    <string name="strOnline">Luzes ligadas</string>
    <string name="strOffline">Luzes desligadas</string>
    <string name="strDesconectar">Desconectado do Bluetooth</string>
    <string name="title_activity_history2">Controluz - Histórico</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="str_app">Aplicativo</string>
</resources>
