<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/str_outros">
        <menu>
            <item
                android:id="@+id/nav_github"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_github" />
            <item
                android:id="@+id/nav_historico"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/str_historico" />
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/str_sobre" />
        </menu>
    </item>

</menu>
