<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtControle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/controle"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textStyle="italic" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <View
        android:id="@+id/divider10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtQuarto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/string_quarto"
        android:textSize="20sp"
        app:fontFamily="casual" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_weight="0"
        android:gravity="start"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/btnLigaDesligaQuarto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="Ligar"
            android:textOn="Desligar" />

    </LinearLayout>

    <Button
        android:id="@+id/btnDesconectarQuarto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/str_btn_desconectar" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <View
        android:id="@+id/divider9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtSala"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/string_sala"
        android:textSize="20sp"
        app:fontFamily="casual" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/btnLigaDesligaSala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="Ligar"
            android:textOn="Desligar" />

    </LinearLayout>

    <Button
        android:id="@+id/btnDesconectarSala"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/str_btn_desconectar" />

    <View
        android:id="@+id/divider12"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <View
        android:id="@+id/divider11"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0"
        android:background="?android:attr/listDivider"
        android:visibility="visible" /><![CDATA[

    android:text="TextView" />

]]>
</LinearLayout>